# test_PatAI

./: .env.example  CLAUDE.md  README.md  SPECIFICATION.md  main.py  pyproject.toml  req.md  specification2.md
app/: __init__.py  config.py  main.py
app/api/: auth.py  documents.py  search.py
app/models/: __init__.py  database.py
app/services/: auth.py  document_processor.py  rag_service.py
app/static/css/: style.css
app/static/js/: admin.js  app.js  chat.js
app/templates/: admin.html  base.html  index.html  login.html  register.html
data/: patai.db
data/vectordb/: chroma.sqlite3
tests/: __init__.py  test_document_processor.py
